@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-08T16:24:40Z",
+  "timestamp" : "2022-07-09T01:15:44Z",
   "count_outdated" : 346,
   "uniques_outdated" : 219,
-  "count" : 372,
+  "count" : 373,
   "uniques" : 235,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
